Adicionada funcionalidade para iniciar o focus no input ao carregar a página

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div id="input">
       <p id="texto-input">Digite um número de 0 a 1000, você tem 10 tentativas!</p>
-      <input type="number" id="input-chute">
+      <input type="number" id="input-chute" autofocus>
       <input type="submit" id="botao" onclick="Chutar()" value="Chutar">
     </div>
   </main>
